Bug 232278 - Can't (easly) start torrents after they reach max seed ratio
Summary: Can't (easly) start torrents after they reach max seed ratio
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 230036 232381 233420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-26 22:52 UTC by Andrej Čremožnik
Modified: 2010-04-06 20:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrej Čremožnik 2010-03-26 22:52:09 UTC
Version:           3.3.4 (using KDE 4.4.1)
OS:                Linux
Installed from:    Mandriva RPMs

I've been wondering if this is more of a wishlist item, but it annoys me so much that I decided to post it as a bug.

I have a global max share ratio set. When downloading torrents with multiple files I usually don't download all files at once. So it happens that the torrent completes seeding before I get everything I want.

Currently (v3.3.4) if I want to start a torrent in "Seeding complete" state I need to force a data check to get ktorrent to recognize the incomplete downloads. Not sure but I think restarting the client helps too.

Anyway, I believe it would be more appropriate for ktorrent to automatically rescan the state of files when a user tries to start a torrent that has reached the max seed ratio.


P.s. I did a quick search and didn't find any similar reports so I apologize if this is a duplicate m(_ _)m
Comment 1 Joris Guisson 2010-04-05 17:53:38 UTC
SVN commit 1111410 by guisson:

Update torrent status properly when torrent is in seeding complete state and a new file is selected for downloading 

BUG: 232278

 M  +2 -1      ChangeLog  
 M  +6 -1      src/torrent/torrentcontrol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1111410
Comment 2 Joris Guisson 2010-04-05 17:57:17 UTC
*** Bug 232381 has been marked as a duplicate of this bug. ***
Comment 3 Joris Guisson 2010-04-05 18:04:09 UTC
*** Bug 230036 has been marked as a duplicate of this bug. ***
Comment 4 Joris Guisson 2010-04-06 20:48:17 UTC
*** Bug 233420 has been marked as a duplicate of this bug. ***