Update torrent status properly when torrent is in seeding complete state and a new file is selected for downloading

BUG: 232278

svn path=/trunk/extragear/network/libktorrent/; revision=1111410